projects/xkblas/include/xkblas/skernels.h

    int
    xkblas_ssyr2k_async(
        int uplo, int trans,
        int n, int k,
        const float * alpha,
        const float * A, int lda,
        const float * B, int ldb,
        const float * beta,
              float * C, int ldc
    );
    int
    xkblas_ssymm_async(
        int side, int uplo,
        int m, int n,
        const float * alpha,
        const float * A, int lda,
        const float * B, int ldb,
        const float * beta,
              float * C, int ldc
    );