api/julia/XKBlas/src/bindings.jl


function ssyr2k_async(uplo, trans, n, k, alpha, A, lda, B, ldb, beta, C, ldc)
    @ccall libxkblas.xkblas_ssyr2k_async(uplo::Cint, trans::Cint, n::Cint, k::Cint, alpha::Ptr{Cfloat}, A::Ptr{Cfloat}, lda::Cint, B::Ptr{Cfloat}, ldb::Cint, beta::Ptr{Cfloat}, C::Ptr{Cfloat}, ldc::Cint)::Cint
end

function ssymm_async(side, uplo, m, n, alpha, A, lda, B, ldb, beta, C, ldc)
    @ccall libxkblas.xkblas_ssymm_async(side::Cint, uplo::Cint, m::Cint, n::Cint, alpha::Ptr{Cfloat}, A::Ptr{Cfloat}, lda::Cint, B::Ptr{Cfloat}, ldb::Cint, beta::Ptr{Cfloat}, C::Ptr{Cfloat}, ldc::Cint)::Cint
end

function spotrf_async(uplo, n, A, lda)
    @ccall libxkblas.xkblas_spotrf_async(uplo::Cint, n::Cint, A::Ptr{Cfloat}, lda::Cint)::Cint
end

function sspmv_async(alpha, transA, nrows, ncols, nnz, csr_row_offsets, csr_col_indices, csr_values, X, beta, Y)
    @ccall libxkblas.xkblas_sspmv_async(alpha::Ptr{Cfloat}, transA::Cint, nrows::Cint, ncols::Cint, nnz::Cint, csr_row_offsets::Ptr{Cint}, csr_col_indices::Ptr{Cint}, csr_values::Ptr{Cfloat}, X::Ptr{Cfloat}, beta::Ptr{Cfloat}, Y::Ptr{Cfloat})::Cint
end

function init()
    @ccall libxkblas.xkblas_init()::Cint
end

function get_device_count(count)
    @ccall libxkblas.xkblas_get_device_count(count::Ptr{Cint})::Cint
end

function sync()
    @ccall libxkblas.xkblas_sync()::Cvoid
end

function deinit()
    @ccall libxkblas.xkblas_deinit()::Cvoid
end

function memory_segment_coherent_async(ptr, size)
    @ccall libxkblas.xkblas_memory_segment_coherent_async(ptr::Ptr{Cvoid}, size::Csize_t)::Cvoid
end

function memory_matrix_coherent_async(ptr, ld, m, n, sizeof_type)
    @ccall libxkblas.xkblas_memory_matrix_coherent_async(ptr::Ptr{Cvoid}, ld::Csize_t, m::Csize_t, n::Csize_t, sizeof_type::Csize_t)::Cvoid
end

function host_async(func, args)
    @ccall libxkblas.xkblas_host_async(func::Ptr{Cvoid}, args::Ptr{Cvoid})::Cvoid
end

function unified_alloc(size)
    @ccall libxkblas.xkblas_unified_alloc(size::Csize_t)::Ptr{Cvoid}
end

function unified_free(ptr, size)
    @ccall libxkblas.xkblas_unified_free(ptr::Ptr{Cvoid}, size::Csize_t)::Cvoid
end

function host_alloc(size)
    @ccall libxkblas.xkblas_host_alloc(size::Csize_t)::Ptr{Cvoid}
end

function host_free(ptr, size)
    @ccall libxkblas.xkblas_host_free(ptr::Ptr{Cvoid}, size::Csize_t)::Cvoid
end

@cenum xkblas_mode_math_t::UInt32 begin
    XKBLAS_DEFAULT_MATH = 0
    XKBLAS_TENSOR_OP_MATH = 1
end

function set_modemath(mode)
    @ccall libxkblas.xkblas_set_modemath(mode::xkblas_mode_math_t)::Cvoid
end

function register_memory(ptr, sz)
    @ccall libxkblas.xkblas_register_memory(ptr::Ptr{Cvoid}, sz::UInt64)::Cint
end

function unregister_memory(ptr, sz)
    @ccall libxkblas.xkblas_unregister_memory(ptr::Ptr{Cvoid}, sz::UInt64)::Cint
end

function memory_register_tiled_async(ptr, sz, n)
    @ccall libxkblas.xkblas_memory_register_tiled_async(ptr::Ptr{Cvoid}, sz::Csize_t, n::Cint)::Cint
end

function memory_unregister_tiled_async(ptr, sz, n)
    @ccall libxkblas.xkblas_memory_unregister_tiled_async(ptr::Ptr{Cvoid}, sz::Csize_t, n::Cint)::Cint
end

function memory_touch_tiled_async(ptr, sz, n)
    @ccall libxkblas.xkblas_memory_touch_tiled_async(ptr::Ptr{Cvoid}, sz::Csize_t, n::Cint)::Cint
end

function get_ngpus()
    @ccall libxkblas.xkblas_get_ngpus()::Cint
end

function get_nanotime()
    @ccall libxkblas.xkblas_get_nanotime()::UInt64
end

"""
    xkblas_malloc(size)

///////////////////////////////
"""
function malloc(size)
    @ccall libxkblas.xkblas_malloc(size::Csize_t)::Ptr{Cvoid}
end

function free(ptr, size)
    @ccall libxkblas.xkblas_free(ptr::Ptr{Cvoid}, size::Csize_t)::Cvoid
end

function set_param(nb, p)
    @ccall libxkblas.xkblas_set_param(nb::Csize_t, p::Csize_t)::Cvoid
end

function finalize()
    @ccall libxkblas.xkblas_finalize()::Cvoid
end

function memory_invalidate_caches()
    @ccall libxkblas.xkblas_memory_invalidate_caches()::Cvoid
end

function register_memory_async(ptr, sz)
    @ccall libxkblas.xkblas_register_memory_async(ptr::Ptr{Cvoid}, sz::UInt64)::UInt64
end

function unregister_memory_async(ptr, sz)
    @ccall libxkblas.xkblas_unregister_memory_async(ptr::Ptr{Cvoid}, sz::UInt64)::Cint
end

function register_memory_waitall()
    @ccall libxkblas.xkblas_register_memory_waitall()::Cint
end

function memory_coherent_async(uplo, memflag, M, N, A, LD, eltsize)
    @ccall libxkblas.xkblas_memory_coherent_async(uplo::Cint, memflag::Cint, M::Csize_t, N::Csize_t, A::Ptr{Cvoid}, LD::Csize_t, eltsize::Csize_t)::Cint
end

const Complex32_t = ComplexF32

const Complex64_t = ComplexF32

const CFloat64_t = Cdouble

function blas2cblas_trans(trans)
    @ccall libxkblas.xkblas_blas2cblas_trans(trans::Cstring)::Cint
end

function blas2cblas_side(side)
    @ccall libxkblas.xkblas_blas2cblas_side(side::Cstring)::Cint
end

function blas2cblas_fill(uplo)
    @ccall libxkblas.xkblas_blas2cblas_fill(uplo::Cstring)::Cint
end

function blas2cblas_diag(diag)
    @ccall libxkblas.xkblas_blas2cblas_diag(diag::Cstring)::Cint
end

function zaxpby_async(n, alpha, x, beta, y)
    @ccall libxkblas.xkblas_zaxpby_async(n::Cint, alpha::ComplexF32, x::Ptr{ComplexF32}, beta::ComplexF32, y::Ptr{ComplexF32})::Cint
end

function zaxpy_async(n, alpha, x, y)
    @ccall libxkblas.xkblas_zaxpy_async(n::Cint, alpha::ComplexF32, x::Ptr{ComplexF32}, y::Ptr{ComplexF32})::Cint
end

function zdot_async(x, y, result)
    @ccall libxkblas.xkblas_zdot_async(x::Ptr{ComplexF32}, y::Ptr{ComplexF32}, result::Ptr{ComplexF32})::Cint
end

# no prototype is found for this function at zkernels.h:32:9, please use with caution
function zdivcopy_async()
    @ccall libxkblas.xkblas_zdivcopy_async()::Cint
end

function zfill(n, x, v)
    @ccall libxkblas.xkblas_zfill(n::Cint, x::Ptr{ComplexF32}, v::ComplexF32)::Cint
end

function znrm2_async(n, x, result)
    @ccall libxkblas.xkblas_znrm2_async(n::Cint, x::Ptr{ComplexF32}, result::Ptr{Cfloat})::Cint
end

# no prototype is found for this function at zkernels.h:38:9, please use with caution
function zscalcopy_async()
    @ccall libxkblas.xkblas_zscalcopy_async()::Cint
end

function zscale_async(n, s, x)
    @ccall libxkblas.xkblas_zscale_async(n::Cint, s::ComplexF32, x::Ptr{ComplexF32})::Cint
end

function zcopyscale_async(m, n, should_copy, IW, D, ldd, L, ldl, U, ldu)
    @ccall libxkblas.xkblas_zcopyscale_async(m::Cint, n::Cint, should_copy::Cint, IW::Ptr{Cint}, D::Ptr{ComplexF32}, ldd::Cint, L::Ptr{ComplexF32}, ldl::Cint, U::Ptr{ComplexF32}, ldu::Cint)::Cint
end

function zgemm_async(transA, transB, m, n, k, alpha, A, lda, B, ldb, beta, C, ldc)
    @ccall libxkblas.xkblas_zgemm_async(transA::Cint, transB::Cint, m::Cint, n::Cint, k::Cint, alpha::Ptr{ComplexF32}, A::Ptr{ComplexF32}, lda::Cint, B::Ptr{ComplexF32}, ldb::Cint, beta::Ptr{ComplexF32}, C::Ptr{ComplexF32}, ldc::Cint)::Cint
end

function zgemmt_async(uplo, transA, transB, n, k, alpha, A, lda, B, ldb, beta, C, ldc)
    @ccall libxkblas.xkblas_zgemmt_async(uplo::Cint, transA::Cint, transB::Cint, n::Cint, k::Cint, alpha::Ptr{ComplexF32}, A::Ptr{ComplexF32}, lda::Cint, B::Ptr{ComplexF32}, ldb::Cint, beta::Ptr{ComplexF32}, C::Ptr{ComplexF32}, ldc::Cint)::Cint
end

function zherk_async(uplo, transA, n, k, alpha, A, lda, beta, C, ldc)
    @ccall libxkblas.xkblas_zherk_async(uplo::Cint, transA::Cint, n::Cint, k::Cint, alpha::Ptr{ComplexF32}, A::Ptr{ComplexF32}, lda::Cint, beta::Ptr{ComplexF32}, C::Ptr{ComplexF32}, ldc::Cint)::Cint
end

function zsyrk_async(uplo, trans, n, k, alpha, A, lda, beta, C, ldc)
    @ccall libxkblas.xkblas_zsyrk_async(uplo::Cint, trans::Cint, n::Cint, k::Cint, alpha::Ptr{ComplexF32}, A::Ptr{ComplexF32}, lda::Cint, beta::Ptr{ComplexF32}, C::Ptr{ComplexF32}, ldc::Cint)::Cint
end

function ztrsm_async(side, uplo, transA, diag, m, n, alpha, A, lda, B, ldb)
    @ccall libxkblas.xkblas_ztrsm_async(side::Cint, uplo::Cint, transA::Cint, diag::Cint, m::Cint, n::Cint, alpha::Ptr{ComplexF32}, A::Ptr{ComplexF32}, lda::Cint, B::Ptr{ComplexF32}, ldb::Cint)::Cint
end

function ztrmm_async(side, uplo, transA, diag, m, n, alpha, A, lda, B, ldb)
    @ccall libxkblas.xkblas_ztrmm_async(side::Cint, uplo::Cint, transA::Cint, diag::Cint, m::Cint, n::Cint, alpha::Ptr{ComplexF32}, A::Ptr{ComplexF32}, lda::Cint, B::Ptr{ComplexF32}, ldb::Cint)::Cint
end

function zsyr2k_async(uplo, trans, n, k, alpha, A, lda, B, ldb, beta, C, ldc)
    @ccall libxkblas.xkblas_zsyr2k_async(uplo::Cint, trans::Cint, n::Cint, k::Cint, alpha::Ptr{ComplexF32}, A::Ptr{ComplexF32}, lda::Cint, B::Ptr{ComplexF32}, ldb::Cint, beta::Ptr{ComplexF32}, C::Ptr{ComplexF32}, ldc::Cint)::Cint
end

function zsymm_async(side, uplo, m, n, alpha, A, lda, B, ldb, beta, C, ldc)
    @ccall libxkblas.xkblas_zsymm_async(side::Cint, uplo::Cint, m::Cint, n::Cint, alpha::Ptr{ComplexF32}, A::Ptr{ComplexF32}, lda::Cint, B::Ptr{ComplexF32}, ldb::Cint, beta::Ptr{ComplexF32}, C::Ptr{ComplexF32}, ldc::Cint)::Cint
end

function zpotrf_async(uplo, n, A, lda)
    @ccall libxkblas.xkblas_zpotrf_async(uplo::Cint, n::Cint, A::Ptr{ComplexF32}, lda::Cint)::Cint
end

function zspmv_async(alpha, transA, nrows, ncols, nnz, csr_row_offsets, csr_col_indices, csr_values, X, beta, Y)
    @ccall libxkblas.xkblas_zspmv_async(alpha::Ptr{ComplexF32}, transA::Cint, nrows::Cint, ncols::Cint, nnz::Cint, csr_row_offsets::Ptr{Cint}, csr_col_indices::Ptr{Cint}, csr_values::Ptr{ComplexF32}, X::Ptr{ComplexF32}, beta::Ptr{ComplexF32}, Y::Ptr{ComplexF32})::Cint
end

# exports
const PREFIXES = [""]
for name in names(@__MODULE__; all=true), prefix in PREFIXES
    if startswith(string(name), prefix)
        @eval export $name
    end
end

